# esp32-p4-example

./: Cargo.toml  build.rs  memory.x
pac/: Cargo.toml  build.rs  device.x  svd2rust.toml
pac/src/: adc.rs  aes.rs  ahb_dma.rs  assist_debug.rs  axi_dma.rs  axi_icm.rs  bitscrambler.rs  cache.rs  clic.rs  dma.rs  ds.rs  ecc.rs  ecdsa.rs  efuse.rs  emac_dma.rs  emac_mac.rs  gpio.rs  gpio_sd.rs  h264.rs  h264_dma.rs  hmac.rs  hp_sys.rs  hp_sys_clkrst.rs  i2c0.rs  i2s0.rs  i3c_mst.rs  i3c_mst_mem.rs  i3c_slv.rs  icm_axi_qos.rs  interrupt.rs  interrupt_core0.rs  interrupt_core1.rs  io_mux.rs  isp.rs  jpeg.rs  lcd_cam.rs  ledc.rs  lib.rs  lp_adc.rs  lp_ana.rs  (+42 more)
pac/src/adc/: arb_ctrl.rs  cali.rs  ctrl.rs  ctrl2.rs  ctrl_date.rs  dma_conf.rs  filter_ctrl0.rs  filter_ctrl1.rs  fsm_wait.rs  int_clr.rs  int_ena.rs  int_raw.rs  int_st.rs  rnd_eco_cs.rs  rnd_eco_high.rs  rnd_eco_low.rs  sar1_data_status.rs  sar1_patt_tab1.rs  sar1_patt_tab2.rs  sar1_patt_tab3.rs  sar1_patt_tab4.rs  sar1_status.rs  sar2_data_status.rs  sar2_patt_tab1.rs  sar2_patt_tab2.rs  sar2_patt_tab3.rs  sar2_patt_tab4.rs  sar2_status.rs  thres0_ctrl.rs  thres1_ctrl.rs  thres_ctrl.rs
pac/src/aes/: aad_block_num.rs  block_mode.rs  block_num.rs  continue_.rs  date.rs  dma_enable.rs  dma_exit.rs  endian.rs  h_mem.rs  inc_sel.rs  int_clear.rs  int_ena.rs  iv_mem.rs  j0_mem.rs  key_.rs  mode.rs  pseudo.rs  remainder_bit_num.rs  rx_reset.rs  state.rs  t0_mem.rs  text_in_.rs  text_out_.rs  trigger.rs  tx_reset.rs
pac/src/ahb_dma/: ahb_test.rs  ahbinf_resp_err_status0.rs  arb_timeout.rs  ch.rs  (+49 more)
pac/tmp/: build.rs
(+6483 files in other folders)
