[workspace]
members = ["pac"]

[package]
name = "esp32-p4-example"
version = "0.1.0"
edition = "2024"

[dependencies]
pac = { path = "pac", features = ["critical-section"] }
critical-section = "1.2.0"
panic-halt = "1.0.0"
riscv = { version = "0.16.0", features = ["critical-section-single-hart"] }
vcell = "0.1.3"
riscv-rt = "0.17.1"
