[package]
name = "pac"
version = "0.1.0"
edition = "2024"

[lib]
bench = false
test = false

[dependencies]
critical-section = { version = "1.2.0", optional = true }
defmt = { version = "1.1.0", optional = true }
vcell = "0.1.3"

[features]
default = []
rt = []
impl-register-debug = []
defmt = ["dep:defmt"]
